# data-builder

./: .gitignore  Procfile  README.md  pyproject.toml  railway.json  requirements.txt  test_connection.py
data/: ew_celebrants.csv  ref_tra_regions_asgs2021.json  seed_major_events_AU.json  seed_public_holidays_AU.json  seed_school_holidays_AU.json  seed_weather_test_cells.json
docs/: SESSION_abn_methods_ab_test_handoff.md  SESSION_abn_website_scraper_test_handoff.md  SESSION_bushfire_historical_activity_handoff.md  SESSION_busy_index_enrichments_handoff.md  SESSION_busy_index_events_expand_handoff.md  SESSION_busy_index_v1_handoff.md  SESSION_silo_weather_backfill_test_handoff.md  SESSION_silo_weather_expansion_handoff.md
scrapers/: __init__.py  abn_lookup_phase2.py  abn_util.py  abr_name_search_for_venues.py  afcc_profile_scraper.py  ag_register.py  build_destination_tra_region_seed.py  celebrant_active_enrichment.py  celebrant_merge.py  celebrant_places_enrichment.py  celebrant_places_supabase.py  celebrant_website_enrichment.py  celebrants_schema.py  compute_event_proximity.py  council_permit_enrichment.py  council_reference_builder.py  download_photos.py  enrich_celebrants_places.py  enrich_chain_seed_venues.py  enrich_photographers_places.py  enrich_venues_from_liquor.py  enrich_venues_from_liquor_v2.py  firms_aggregate_by_destination.py  firms_annual_refresh.py  firms_hotspot_download.py  flood_and_elevation.py  group_abn_deep_lookup.py  group_abn_lookup.py  influencer_discovery.py  influencer_enrichment.py  influencer_util.py  inherit_group_abn.py  (+28 more)
(+92 files in other folders)
